# ethglobal-london-2023

./: README.md
caster/: README.md
contracts/: README.md
dune-sdk/: README.md
fluence/: Cargo.toml  README.md  fluence.yaml  package-lock.json  provider.yaml
fluence/.fluence/: docker-compose.yaml  provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
fluence/.fluence/aqua/: deals.aqua  services.aqua
fluence/.fluence/ccp-configs/: nox-1_Config.toml
fluence/.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
fluence/src/aqua/: helpers.aqua  main.aqua  services.aqua  types.aqua
fluence/src/gateway/src/: relays.json
fluence/src/gateway/src/compiled-aqua/: main.d.ts  main.js
fluence/src/services/memContent/: service.yaml
fluence/src/services/memContent/memContent/: Cargo.toml  module.yaml
fluence/src/services/memContent/memContent/src/: main.rs
fluence/src/services/memData/: service.yaml
fluence/src/services/memData/curl_effector/: module.yaml
fluence/src/services/memData/memData/: Cargo.toml  module.yaml
fluence/src/services/memData/memData/src/: dune.rs  main.rs  mockData.rs  types.rs  vault.rs
fluence/src/services/memKubo/: service.yaml
fluence/src/services/memSubscriptions/: service.yaml
fluence/src/services/memTypes/: Cargo.toml  lib.rs
fluence/src/services/test/: service.yaml
fluence/src/spells/scheduler/: spell.aqua
frame/: README.md
frame/frame/: README.md  package-lock.json  package.json
frame/frame/src/app/: types.ts
frontend/: README.md
memberships/: safe_subscription.json  upload.sh
(+20 files in other folders)
