[package]
name = "memContent"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "memContent"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
curl-effector-imports = { git = "https://github.com/fluencelabs/effectors.git", branch = "introduce-crates" }
mem_types = { path = "../../memTypes" }
serde = "1.0.193"
serde_json = "1.0.108"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
